--- a/doc/thesis/thesis.bib
+++ b/doc/thesis/thesis.bib
@@ -100,6 +100,25 @@
   organization={IEEE}
 }
 
+% population generation
+
+@article{umena2011crystal,
+  title={Crystal structure of oxygen-evolving photosystem II at a resolution of 1.9 {\AA}},
+  author={Umena, Yasufumi and Kawakami, Keisuke and Shen, Jian-Ren and Kamiya, Nobuo},
+  journal={Nature},
+  volume={473},
+  number={7345},
+  pages={55--60},
+  year={2011},
+  publisher={Nature Publishing Group}
+}
+
+@electronic{databank,
+  title={Crystal structure of oxygen-evolving Photosystem II at 1.9 angstrom resolution},
+  url={http://www.rcsb.org/pdb/explore/explore.do?structureId=3arc},
+  organization={PDB Protein Data Bank}
+}
+
 % unused
 
 @article{00033078510000920140101,
