--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -17,6 +17,8 @@
 \usepackage{algorithm}
 \usepackage{algorithmic}
 \usepackage{graphicx}
+\usepackage{tabu}
+\usepackage{color}
 %feel free to add here
 
 \usepackage[top=1.0in, bottom=1.0in, left=1.5in, right=1.0in]{geometry} %set page margins
@@ -59,10 +61,10 @@
 \pagestyle{headings}
 \input{introduction}
 
-%body files go here using \input{file} where file is file.tex
-\input{previous-work}
-
 \input{background}
+\input{previous-work}
+\input{methodology}
+
 % \input{conclusion}
 %\theendnotes
 
