--- a/doc/thesis/introduction.tex
+++ b/doc/thesis/introduction.tex
@@ -4,9 +4,11 @@ The aim of this thesis is to find a better method for determining the atomic str
 
 \section{Biological Background}
 
-The oxygen-evolving complex (OEC) is the water-oxidizing enzyme of photosystem II. The responsibility of the OEC is to accept water molecules as input and output the oxygen and hydrogen atoms to be used in the system ~\cite{oxygenicPhotosynthesis}. The incoming water molecules are put through four different states in order to perform the oxidization. The atomic structure of the OEC molecule is different in each state because each state has a unique role in the process.
+The oxygen-evolving complex (OEC)~\cite{yano2006manganese} is the water-oxidizing enzyme of photosystem II~\cite{oxygenicPhotosynthesis}. The responsibility of the OEC is to accept water molecules as input and output the oxygen and hydrogen atoms to be used in the system. The incoming water molecules are put through five different states in order to perform the oxidization. The atomic structure of the OEC molecule is different in each state because each state has a unique role in the process.
 
-\textbf{(Work biomimetic chemistry into this. Define: mimicking the laws of nature to synthesize compounds.)}
+The most significant feature of this compound is its inorganic core Mn$_{4}$Ca$_{1}$O$_{x}$Cl$_{1-2}$(HCO$_{3}$)$_{y}$. It is not found anywhere else in biology and offers the only biological blueprint for water splitting. By studying OEC the hope is to understand how water splitting can occur at such a low cost. Aquiring a better understanding of how the water splitting process occurs will assist in creating biomimetic catalysts or engineered PSII enzymes for real world applications.
+
+% \textbf{(Work biomimetic chemistry into this. Define: mimicking the laws of nature to synthesize compounds.)}
 
 \section{X-ray Absorption Spectroscopy}
 
