--- a/doc/thesis/thesis.bib
+++ b/doc/thesis/thesis.bib
@@ -1,5 +1,7 @@
 %add bibtex entries here
 
+% introduction
+
 @article{oxygenicPhotosynthesis,
 	Abstract = {Photosystem II (PSII) uses light energy to split water into chemi-cal products that power the planet. The stripped protons contribute to a membrane electrochemical potential before combining with die stripped electrons to make chemical bonds and releasing O2 for power-ing respiratory metabolisms. In this review, we provide an overview of the kinetics and thermodynamics of water oxidation that highlights the conserved performance of PSIIs across species. We discuss recent ad-vances in our understanding of the site of water oxidation based upon the improved (1.9-Å resolution) atomic structure of the Mn4CaO5 water-oxidizing complex (WOC) within cyanobacterial PSII. We combine these insights with recent knowledge gained from studies of the bio-genesis and assembly of the WOC (called photoassembly) to arrive at a proposed chemical mechanism for water oxidation. [ABSTRACT FROM AUTHOR]},
 	Author = {Vinyard, David J. and Ananyev, Gennady M. and Dismukes, G. Charles},
@@ -11,6 +13,14 @@
 	Volume = {82},
 	URL = {http://proxy.library.brocku.ca/login?url=http://search.ebscohost.com/login.aspx?direct=true&db=a9h&AN=89473480&site=eds-live&scope=site},
 	Year = {2013},
+}
+
+@article{yano2006manganese,
+  title={Manganese: The Oxygen-Evolving Complex and Models},
+  author={Yano, Junko and Kern, Jan},
+  journal={Encyclopedia of Inorganic and Bioinorganic Chemistry},
+  year={2006},
+  publisher={Wiley Online Library}
 }
 
 @article{newville2004fundamentals,
