--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -52,7 +52,7 @@
 % \include{abstract}
 % \include{preface}
 % \include{ack} 
-% \include{lists}
+\include{lists}
 %%list of Plates
 %list of symbols, nonmenclature, or Abbrevations
 
