--- a/doc/thesis/background.tex
+++ b/doc/thesis/background.tex
@@ -2,6 +2,7 @@
 
 The purpose of this chapter is to assist the reader in understand the search techniques used in this work.
 
+\input{background/ea}
 \input{background/ga}
 \input{background/rga}
 \input{background/pso}
