--- a/doc/thesis/introduction.tex
+++ b/doc/thesis/introduction.tex
@@ -37,7 +37,9 @@ The absorption coefficients measured after the initial absorption are referred t
 
 \section{Force Fields aka Potential Energy}
 
-Here will explain what force fields are and how they calculate a molecules potential energy.
+% VMD with namdenergy plugin using AMBER mode.
+
+% Here will explain what force fields are and how they calculate a molecules potential energy.
 
 \section{Problem Definition}
 
